--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/common": "^6.1.0",
     "@angular/compiler": "^6.1.0",
     "@angular/core": "^6.1.0",
+    "@angular/flex-layout": "^6.0.0-beta.18",
     "@angular/forms": "^6.1.0",
     "@angular/http": "^6.1.0",
     "@angular/material": "^6.4.7",
@@ -24,6 +25,7 @@
     "@angular/router": "^6.1.0",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "normalize.css": "^8.0.0",
     "rxjs": "~6.2.0",
     "zone.js": "~0.8.26"
   },
